--- a/index.html
+++ b/index.html
@@ -3,93 +3,94 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Por que viver na presença de Jesus?</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>Por que viver na presença de Jesus</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="light">
+
   <section class="home" id="inicio">
-    <img src="https://st.depositphotos.com/52441776/56409/i/450/depositphotos_564093166-stock-photo-silhouette-christian-praying-hands-spiritual.jpg" alt="Fundo" class="bg">
-    <button id="startButton">Por que ir para Jesus?</button>
+    <img src="https://st.depositphotos.com/52441776/56409/i/450/depositphotos_564093166-stock-photo-silhouette-christian-praying-hands-spiritual.jpg" alt="Inicio" class="background" />
+    <button class="main-button" onclick="mostrarConteudo()">Por que ir para Jesus?</button>
   </section>
 
-  <main id="conteudoPrincipal" class="hidden">
-    <section class="hero">
-      <img src="https://img.elo7.com.br/product/main/487EE8B/letras-luminosas-jesus-a-pilhas-luminaria.jpg" alt="Jesus Iluminado" class="bg">
-    </section>
+  <section class="conteudo" id="conteudo" style="display: none;">
+    <img src="https://img.elo7.com.br/product/main/487EE8B/letras-luminosas-jesus-a-pilhas-luminaria.jpg" alt="Jesus Luz" class="background" />
+    
+    <div class="versiculo"><h2>João 19:30</h2></div>
 
-    <section class="mensagem">
+    <div class="secao">
       <h2>Como se aproximar de Deus</h2>
       <ul>
-        <li>Ore diariamente, mesmo que por poucos minutos.</li>
-        <li>Leia a Bíblia e reflita sobre os ensinamentos.</li>
-        <li>Vá a uma igreja e participe dos cultos.</li>
-        <li>Perdoe e peça perdão com o coração.</li>
-        <li>Busque comunhão com irmãos na fé.</li>
+        <li>Ore diariamente com sinceridade.</li>
+        <li>Leia a Bíblia e reflita sobre a Palavra.</li>
+        <li>Busque uma comunidade cristã.</li>
+        <li>Tenha fé nos momentos difíceis.</li>
+        <li>Pratique o amor ao próximo.</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="mensagem">
+    <div class="secao">
       <h2>Versículos & Mensagens</h2>
       <ul>
-        <li>"O Senhor é o meu pastor e nada me faltará." - Salmo 23:1</li>
-        <li>"Entrega o teu caminho ao Senhor; confia nele." - Salmo 37:5</li>
-        <li>"Eu sou o caminho, a verdade e a vida." - João 14:6</li>
+        <li>"O Senhor é o meu pastor, nada me faltará." - Salmos 23:1</li>
+        <li>"Entrega o teu caminho ao Senhor..." - Salmos 37:5</li>
         <li>"Tudo posso naquele que me fortalece." - Filipenses 4:13</li>
-        <li>"Alegrai-vos na esperança, sede pacientes na tribulação." - Romanos 12:12</li>
+        <li>"Porque Deus amou o mundo..." - João 3:16</li>
+        <li>"Não temas, pois eu sou contigo." - Isaías 41:10</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="mensagem">
+    <div class="secao">
       <h2>Por que viver na presença de Jesus?</h2>
       <ul>
-        <li>Ele transforma a dor em esperança.</li>
-        <li>Nos dá direção e propósito de vida.</li>
-        <li>Oferece paz que o mundo não conhece.</li>
-        <li>Jesus nunca abandona quem o busca.</li>
-        <li>Em Jesus há salvação e vida eterna.</li>
+        <li>Encontra paz verdadeira.</li>
+        <li>Sente-se amado incondicionalmente.</li>
+        <li>Tem direção e propósito.</li>
+        <li>Recebe perdão e misericórdia.</li>
+        <li>Vive com esperança eterna.</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="mensagem">
+    <div class="secao">
       <h2>Quem somos</h2>
-      <p>Somos Filhos de Cristo, guiados pelo amor e pela fé, levando a mensagem do Evangelho a todos que desejam viver a verdade de Deus.</p>
-    </section>
+      <p><strong>Filhos de Cristo</strong> — pessoas comuns com um propósito eterno: espalhar o amor de Jesus!</p>
+    </div>
 
-    <section class="mensagem">
-      <h2>Pedido de Oração</h2>
-      <p>Envie sua oração e estaremos intercedendo por você. Você não está sozinho(a), Jesus está contigo!</p>
-    </section>
+    <div class="secao">
+      <h2>Pedido de oração</h2>
+      <p>Sinta-se à vontade para nos procurar se precisa de oração. Estamos aqui para ouvir e interceder por você!</p>
+    </div>
+
+    <div class="convite">
+      <p>Não tem uma igreja para congregar?</p>
+      <p>Venha para a <strong>Assembleia de Deus Barreirinha</strong>.</p>
+      <p>Mais informações sobre a igreja? Me chama no WhatsApp!</p>
+      <p><strong>Ungidos Por Deus</strong> espera por você!</p>
+    </div>
 
     <footer>
-      <p>Feito por Jesus - Usado por ele para criar o site foi Victor Hugo</p>
+      <p>Feito por Jesus - Usado por Ele para criar o site foi Victor Hugo</p>
       <div class="contato">
-        <img src="7f0114de-fddb-4cda-acc3-33cf6489a17b.jpeg" alt="Contato" class="foto-contato">
-        <ul>
-          <li>Instagram: @hugozxp7</li>
-          <li>WhatsApp: 41 997088269</li>
-        </ul>
+        <p>Insta: @hugozxp7 | WhatsApp: 41 997088269</p>
+        <img src="7f0114de-fddb-4cda-acc3-33cf6489a17b.jpeg" alt="WhatsApp" class="foto-contato"/>
       </div>
-      <p class="final">Jesus é o suficiente!</p>
+      <h3>Jesus é o suficiente!</h3>
     </footer>
-  </main>
+  </section>
 
-  <button class="tema-btn" id="temaToggle">😇</button>
+  <button class="tema-toggle" onclick="alternarTema()">😇</button>
 
   <script>
-    const btn = document.getElementById("startButton");
-    const conteudo = document.getElementById("conteudoPrincipal");
-    const temaToggle = document.getElementById("temaToggle");
-
-    btn.addEventListener("click", () => {
+    function mostrarConteudo() {
       document.getElementById("inicio").style.display = "none";
-      conteudo.classList.remove("hidden");
-    });
+      document.getElementById("conteudo").style.display = "block";
+      window.scrollTo(0, 0);
+    }
 
-    temaToggle.addEventListener("click", () => {
+    function alternarTema() {
       document.body.classList.toggle("dark");
       document.body.classList.toggle("light");
-    });
+    }
   </script>
 </body>
 </html>
-
