--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <button id="theme-toggle" aria-label="Alternar tema">😇</button>
+  <button id="theme-toggle">😇</button>
 
-  <!-- Imagem de fundo fixa no topo -->
-  <div class="hero-image"></div>
+  <!-- Tela Inicial -->
+  <section id="inicio" class="inicio">
+    <div class="inicio-content">
+      <button id="entrar">Por que ir para Jesus?</button>
+    </div>
+  </section>
 
-  <!-- Aba 1 -->
-  <section id="aba1" class="aba">
-    <button id="entrar" class="btn-grande">Por que ir para Jesus?</button>
+  <!-- Primeira Aba Principal -->
+  <section id="principal" class="principal hidden">
+    <div class="versiculo-container">
+      <span class="versiculo">João 19:30</span>
+    </div>
 
-    <div class="conteudo-principal hidden">
+    <div class="conteudo">
       <h2>Como se aproximar de Deus</h2>
       <ul>
         <li>Ore diariamente com o coração sincero</li>
@@ -44,128 +50,108 @@
         <li>Preenche o vazio da alma</li>
       </ul>
 
-      <div class="btn-container">
-        <button id="btn-aba2" class="btn-pequeno">Continuar ➡️</button>
+      <h2>Quem somos</h2>
+      <p>Somos <strong>Filhos de Cristo</strong>, unidos para compartilhar o amor de Deus.</p>
+
+      <button class="btn-navegacao" id="btn-continuar">Continuar ➡️</button>
+    </div>
+
+    <footer>
+      <div class="footer-info">
+        <img src="7f0114de-fddb-4cda-acc3-33cf6489a17b.jpeg" alt="Perfil" class="perfil" />
+        <div>
+          <p>Feito por Jesus - Usado por Ele: Victor Hugo</p>
+          <p>Instagram: @hugozxp7</p>
+          <p>WhatsApp: 41 997088269</p>
+        </div>
+      </div>
+      <p class="final">Jesus é o suficiente!</p>
+    </footer>
+  </section>
+
+  <!-- Segunda Aba: Pedido de Oração e Estudos Bíblicos -->
+  <section id="segunda" class="segunda hidden">
+    <div class="conteudo">
+      <h2>Pedido de Oração</h2>
+      <p>Envie seu pedido, vamos orar com fé por você.</p>
+
+      <form id="form-oracao">
+        <label for="pedido">Coloque seu pedido de oração:</label><br />
+        <textarea id="pedido" name="pedido" rows="4" required></textarea><br />
+        <button type="submit">Enviar Pedido</button>
+      </form>
+
+      <div class="convite">
+        <p>
+          Não tem uma igreja para congregar?<br />
+          Venha para a <strong>Assembleia de Deus Barreirinha</strong>!<br />
+          Mais informações sobre a igreja? Me chama no WhatsApp.<br />
+          <strong>Ungidos por Deus espera por você!</strong>
+        </p>
+      </div>
+
+      <h2>📖 Estudos Bíblicos</h2>
+      <ul>
+        <li>Lição 1: O amor de Deus incondicional</li>
+        <li>Lição 2: A importância da oração diária</li>
+        <li>Lição 3: Fortalecendo a fé em tempos difíceis</li>
+      </ul>
+
+      <div class="botoes-navegacao">
+        <button class="btn-navegacao" id="btn-voltar">⬅️ Voltar</button>
       </div>
     </div>
   </section>
 
-  <!-- Aba 2 -->
-  <section id="aba2" class="aba hidden">
-    <h2>Pedido de Oração</h2>
-    <p>Envie seu pedido, vamos orar com fé por você.</p>
-
-    <form id="form-oracao">
-      <label for="pedido">Coloque seu pedido de oração:</label><br />
-      <textarea id="pedido" name="pedido" rows="5" required placeholder="Digite aqui seu pedido..."></textarea><br />
-      <button type="submit">Enviar Pedido</button>
-    </form>
-
-    <div class="convite">
-      <p>
-        Não tem uma igreja para congregar?<br />
-        Venha para a <strong>Assembleia de Deus Barreirinha</strong>!<br />
-        Mais informações sobre a igreja? Me chama no WhatsApp.<br />
-        <strong>Ungidos por Deus espera por você!</strong>
-      </p>
-    </div>
-
-    <div class="btn-container">
-      <button id="btn-voltar2" class="btn-pequeno">⬅️ Voltar</button>
-      <button id="btn-aba3" class="btn-pequeno">Continuar ➡️</button>
-    </div>
-  </section>
-
-  <!-- Aba 3 -->
-  <section id="aba3" class="aba hidden">
-    <h2>📖 Estudos Bíblicos</h2>
-    <ul>
-      <li>Lição 1: Entendendo o Amor de Deus</li>
-      <li>Lição 2: A importância da oração na vida cristã</li>
-      <li>Lição 3: Como aplicar a palavra de Deus no dia a dia</li>
-    </ul>
-
-    <div class="btn-container">
-      <button id="btn-voltar3" class="btn-pequeno">⬅️ Voltar</button>
-    </div>
-  </section>
-
-  <!-- Rodapé -->
-  <footer>
-    <div class="footer-info">
-      <img src="7f0114de-fddb-4cda-acc3-33cf6489a17b.jpeg" alt="Perfil" class="perfil" />
-      <div>
-        <p>Feito por Jesus - Usado por Ele: Victor Hugo</p>
-        <p>Instagram: @hugozxp7</p>
-        <p>WhatsApp: 41 997088269</p>
-      </div>
-    </div>
-    <p class="final">Jesus é o suficiente!</p>
-  </footer>
+  <!-- Player invisível do YouTube com música de fundo -->
+  <div style="display:none;">
+    <iframe
+      width="0"
+      height="0"
+      src="https://www.youtube.com/embed/Ol62DLl7LnM?autoplay=1&loop=1&playlist=Ol62DLl7LnM&controls=0&mute=0"
+      frameborder="0"
+      allow="autoplay"
+      allowfullscreen
+    ></iframe>
+  </div>
 
   <script>
-    // Controlar abas
-    const entrarBtn = document.getElementById("entrar");
-    const aba1 = document.getElementById("aba1");
-    const aba2 = document.getElementById("aba2");
-    const aba3 = document.getElementById("aba3");
+    const btnEntrar = document.getElementById("entrar");
+    const inicio = document.getElementById("inicio");
+    const principal = document.getElementById("principal");
+    const segunda = document.getElementById("segunda");
 
-    const btnAba2 = document.getElementById("btn-aba2");
-    const btnVoltar2 = document.getElementById("btn-voltar2");
-    const btnAba3 = document.getElementById("btn-aba3");
-    const btnVoltar3 = document.getElementById("btn-voltar3");
+    const btnContinuar = document.getElementById("btn-continuar");
+    const btnVoltar = document.getElementById("btn-voltar");
 
-    entrarBtn.onclick = () => {
-      entrarBtn.style.display = "none";
-      document.querySelector(".conteudo-principal").classList.remove("hidden");
-      window.scrollTo({top:0, behavior:"smooth"});
-    };
-
-    btnAba2.onclick = () => {
-      aba1.classList.add("hidden");
-      aba2.classList.remove("hidden");
-      window.scrollTo({top:0, behavior:"smooth"});
-    };
-
-    btnVoltar2.onclick = () => {
-      aba2.classList.add("hidden");
-      aba1.classList.remove("hidden");
-      window.scrollTo({top:0, behavior:"smooth"});
-    };
-
-    btnAba3.onclick = () => {
-      aba2.classList.add("hidden");
-      aba3.classList.remove("hidden");
-      window.scrollTo({top:0, behavior:"smooth"});
-    };
-
-    btnVoltar3.onclick = () => {
-      aba3.classList.add("hidden");
-      aba2.classList.remove("hidden");
-      window.scrollTo({top:0, behavior:"smooth"});
-    };
-
-    // Tema escuro
     const toggle = document.getElementById("theme-toggle");
+
+    btnEntrar.onclick = () => {
+      inicio.classList.add("hidden");
+      principal.classList.remove("hidden");
+    };
+
+    btnContinuar.onclick = () => {
+      principal.classList.add("hidden");
+      segunda.classList.remove("hidden");
+    };
+
+    btnVoltar.onclick = () => {
+      segunda.classList.add("hidden");
+      principal.classList.remove("hidden");
+    };
+
     toggle.onclick = () => {
       document.body.classList.toggle("dark");
     };
 
-    // Formulário: alerta e limpar
+    // Exemplo simples de envio do formulário (apenas alerta)
     const formOracao = document.getElementById("form-oracao");
     formOracao.onsubmit = (e) => {
       e.preventDefault();
-      alert("Pedido de oração enviado com sucesso! Vamos orar por você.");
+      alert("Pedido de oração enviado com fé! 🙏");
       formOracao.reset();
     };
-
-    // Música de fundo (opcional)
-    const audio = document.createElement("audio");
-    audio.src = "https://cdn.pixabay.com/download/audio/2023/03/06/audio_3eaf2e2e99.mp3?filename=soft-inspirational-piano-10892.mp3";
-    audio.loop = true;
-    audio.autoplay = true;
-    audio.volume = 0.15;
-    document.body.appendChild(audio);
   </script>
 </body>
 </html>
